<resources>
    <string name="app_name">NCNN_ObjectDetection</string>
    <string name="preview_area">preview_area</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Object Detection Settings</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Object Detection Method</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Use GPU Accelerate</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="useGPU">useGPU</string>
    <string name="method_index">method_index</string>
</resources>
